carousel basic layout and slide

--- a/kailash/src/components/header/navbar.module.css
+++ b/kailash/src/components/header/navbar.module.css
@@ -1,10 +1,10 @@
 .header {
 	margin: auto;
-	padding: 1rem;
+	padding: 1rem 0 1rem 0;
 	display: flex;
 	position: sticky;
 	top: 0;
-	height: 60px;
+	height: 80px;
 }
 
 .header nav {
