--- a/kailash/src/components/content/landing.module.css
+++ b/kailash/src/components/content/landing.module.css
@@ -1,30 +1,58 @@
+/* parent div */
 .landing {
 	display: flex;
 	flex-direction: column;
-	height: calc(100vh - 76px);
+	min-height: 100vh;
+	margin: 0;
+	width: 100%;
+	box-sizing: border-box;
+	max-height: calc(100vh- 68px);
 }
 
+/* text div*/
 .outro {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-basis: 40%;
+	max-height: calc(100% - 1rem);
+	flex: 1;
 }
 
+.text {
+	font-size: 3rem;
+	text-align: center;
+}
+
+/* image div container*/
 .img {
-	flex-basis: 60%;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+	max-height: calc(100% - 1rem);
+	flex: 5;
 }
 
+/* image div */
 .pictures {
-	flex-basis: 30%;
+	flex: 2;
 	display: flex;
 	flex-direction: column;
 	padding: 1rem;
 	justify-content: center;
 	align-items: center;
+	max-height: calc(100% - 1rem);
+	overflow: auto;
+	min-width: 30%;
+	min-height: 30%;
+}
+
+/* style image*/
+.pictures img {
+	max-width: 80%;
+	max-height: 80%;
+	min-width: 30%;
+	min-height: 30%;
+	object-fit: contain;
 }
