--- a/kailash/src/components/caraousel/imageSlider.module.css
+++ b/kailash/src/components/caraousel/imageSlider.module.css
@@ -1,13 +1,34 @@
 .imageSlider {
-	transition: all 5s ease-in-out;
+	position: relative;
 	display: flex;
+	align-items: center;
 	justify-content: center;
-	max-height: 100%;
-	max-width: 100%;
+	height: 100%;
+	width: 100%;
+	background-color: aliceblue;
+
+	flex-direction: row;
 }
 
-.imageSlider img {
+.slides {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: auto;
+}
+
+.slides img {
+	max-width: 70%;
+	max-height: 100%;
 	object-fit: contain;
-	max-width: 80%;
-	max-height: 80%;
+	transition: transform 0.5s ease-in-out;
+	padding: 0 10px;
+}
+
+.previousBtn {
+	flex: 1;
+}
+
+.nextBtn {
+	flex: 1;
 }
