--- a/kailash/src/components/caraousel/imageSlider.module.css
+++ b/kailash/src/components/caraousel/imageSlider.module.css
@@ -3,32 +3,44 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 100%;
 	width: 100%;
 	background-color: aliceblue;
-
+	height: 100%;
 	flex-direction: row;
 }
 
 .slides {
+	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex: auto;
+	overflow: hidden;
+	max-height: 80%;
+	flex: 10;
+	min-width: 50%;
 }
 
+.slides div {
+	flex: 1;
+	display: flex;
+	justify-content: center;
+	max-width: 100%;
+}
 .slides img {
-	max-width: 70%;
-	max-height: 100%;
+	width: 100%;
 	object-fit: contain;
 	transition: transform 0.5s ease-in-out;
-	padding: 0 10px;
 }
 
 .previousBtn {
 	flex: 1;
+	display: flex;
+	justify-content: center;
 }
 
 .nextBtn {
 	flex: 1;
+	display: flex;
+	justify-content: center;
 }
