--- a/kailash/src/components/header/navbar.module.css
+++ b/kailash/src/components/header/navbar.module.css
@@ -17,6 +17,7 @@
 .list {
 	display: flex;
 	gap: 1rem;
+	text-align: center;
 }
 
 .list a {
@@ -44,5 +45,7 @@
 
 .routes {
 	flex-basis: 10%;
-	text-align: center;
+	justify-content: center;
+	align-items: center;
+	display: flex;
 }
