--- a/kailash/src/components/content/landing.module.css
+++ b/kailash/src/components/content/landing.module.css
@@ -2,11 +2,11 @@
 .landing {
 	display: flex;
 	flex-direction: column;
-	min-height: 100vh;
+	height: calc(100vh -112px);
 	margin: 0;
 	width: 100%;
 	box-sizing: border-box;
-	max-height: calc(100vh- 68px);
+	flex: 1;
 }
 
 /* text div*/
@@ -28,31 +28,20 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: center;
 	align-items: center;
 	max-height: calc(100% - 1rem);
 	flex: 5;
-}
-
-/* image div */
-.pictures {
-	flex: 2;
-	display: flex;
-	flex-direction: column;
-	padding: 1rem;
-	justify-content: center;
-	align-items: center;
-	max-height: calc(100% - 1rem);
-	overflow: auto;
-	min-width: 30%;
-	min-height: 30%;
+	justify-content: space-evenly;
+	border-right: 0.5px solid #f9b208;
 }
 
 /* style image*/
 .pictures img {
-	max-width: 80%;
-	max-height: 80%;
-	min-width: 30%;
-	min-height: 30%;
 	object-fit: contain;
+}
+
+/* text*/
+
+.img p {
+	color: #f9b208;
 }
