--- a/kailash/src/pages/root.module.css
+++ b/kailash/src/pages/root.module.css
@@ -1,11 +1,10 @@
 .root {
 	display: flex;
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 	flex-direction: column;
 }
 
 .content {
 	flex: 1;
-	overflow: auto;
 }
