--- a/kailash/src/components/caraousel/imageSlider.module.css
+++ b/kailash/src/components/caraousel/imageSlider.module.css
@@ -45,10 +45,12 @@
 	flex: 1;
 	display: flex;
 	justify-content: center;
+	padding: 1rem;
 }
 
 .nextBtn {
 	flex: 1;
 	display: flex;
 	justify-content: center;
+	padding: 1rem;
 }
