--- a/kailash/src/components/testimonials/testimonials.module.css
+++ b/kailash/src/components/testimonials/testimonials.module.css
@@ -1,11 +1,10 @@
 .testimonials {
 	display: flex;
-	flex-direction: ROW;
-
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	min-height: 50vh;
-	max-height: 80vh;
+	height: 70vh;
+	padding: 1rem;
 }
 .testimonials button {
 	border-radius: 1rem;
@@ -40,15 +39,48 @@
 	max-height: 80%;
 	flex: 10;
 	min-width: 50%;
+	color: #6b728e;
+}
+
+.testimonials-portrait {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: 1;
+	overflow: hidden;
 }
 
 .testimonials-image img {
 	object-fit: contain;
-	width: 100%;
+	max-height: 80%;
+	max-width: 80%;
 }
 .testimonials-text {
 	display: flex;
+	flex-direction: column;
 	flex: 1;
 	justify-content: center;
-	color: red;
+	align-items: center;
+}
+
+.testimonials-userName {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: 1;
+	height: 100%;
+	width: 100%;
+	padding: 1rem;
+	text-decoration: underline #f9b208;
+}
+
+.testimonials-comment {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex: 5;
+	height: 100%;
+	width: 100%;
+	padding: 1rem;
+	flex-wrap: wrap;
 }
